[fix] getFirst로 수정